change in morsel

--- a/code/matlab/3d/jerome.conf
+++ b/code/matlab/3d/jerome.conf
@@ -58,7 +58,7 @@ imu = Sensor(
   model        = "xsens_mti",
   parent       = platform,
   position     = [0.3, 0, 1.33],
-  orientation  = [45.0, 10.0, 20.0] # yaw, pitch, roll
+  orientation  = [45.0, 40.0, 20.0] # yaw, pitch, roll
 )
 
 #-------------------------------------------------------------------------------
@@ -119,34 +119,22 @@ outputFile.write("# Vehicle parameters [m]: "+
   platform.actuator.getWheelDistance(2, 3),
   platform.actuator.wheelRadius[0], platform.actuator.wheelRadius[1],
   platform.actuator.wheelRadius[2], platform.actuator.wheelRadius[3]))
-t_vo = platform.actuator.getPosition(imu)
-r_vo = platform.actuator.getOrientation(imu)
+t_io = platform.actuator.getPosition(imu)
+r_io = platform.actuator.getOrientation(imu)
 outputFile.write("# Odometry frame (relative to IMU frame) [m]/[deg]: "+
   "t_x = %.9f, t_y = %.9f, t_z = %.9f, r_x = %.9f, r_y = %.9f, r_z = %.9f\n" %
-  (t_vo[0], t_vo[1], t_vo[2], r_vo[1], r_vo[2], r_vo[0]))
+  (t_io[0], t_io[1], t_io[2], r_io[1], r_io[2], r_io[0]))
 outputFile.write("# Format: time [s], x [m], y [m], z [m], "+
   "r_x [deg], r_y [deg], r_z [deg], v_x [m/s], v_y [m/s], v_z [m/s], "+
   "w_x [deg/s], w_y [deg/s], w_z [deg/s], w_FL [deg/s], w_FR [deg/s], "+
   "w_RL [deg/s], w_RR [deg/s], phi [deg]\n")
 
 def output(time):
-#  v = framework.world.scene.getRelativeVector(imu,
-#    panda.Vec3(*imu.translationalVelocity))
-  v = imu.solid.body.body.getLinearVel()
-#  w = framework.world.scene.getRelativeVector(imu,
-#    panda.Vec3(imu.rotationalVelocity[2], imu.rotationalVelocity[1],
-#    imu.rotationalVelocity[0]))
-  w = imu.solid.body.body.getAngularVel() * 180 / pi
+  v_iw_b = imu.solid.body.body.getLinearVel()
+  w_iw_b = imu.solid.body.body.getAngularVel() * 180 / pi
 
-  t_o = platform.actuator.getPosition()
-  r_o = platform.actuator.getOrientation()
-  v_o = platform.actuator.solid.body.body.getLinearVel()
-  w_o = platform.actuator.solid.body.body.getAngularVel() * 180 / pi
-
-  t_o_2 = platform.actuator.solid.body.body.getPosition()
-  C_o_2 = platform.actuator.solid.body.body.getRotation()
-  t_i_2 = imu.solid.body.body.getPosition()
-  C_i_2 = imu.solid.body.body.getRotation()
+  t_wi_b = imu.solid.body.body.getPosition()
+  C_wi_b = imu.solid.body.body.getRotation()
 
   line = "%.6f " % framework.scheduler.getTime()+ \
     "%.9f %.9f %.9f %.9f %.9f %.9f " % \
@@ -154,19 +142,13 @@ def output(time):
     imu.globalOrientation[1], imu.globalOrientation[2],
     imu.globalOrientation[0])+ \
     "%.9f %.9f %.9f %.9f %.9f %.9f " % \
-    (v[0], v[1], v[2], w[0], w[1], w[2])+ \
+    (v_iw_b[0], v_iw_b[1], v_iw_b[2], w_iw_b[0], w_iw_b[1], w_iw_b[2])+ \
     "%.9f %.9f %.9f %.9f %.9f" % \
     (platform.actuator.turningRates[0], platform.actuator.turningRates[1],
     platform.actuator.turningRates[2], platform.actuator.turningRates[3],
     platform.actuator.state[1])+ \
-    " %.9f %.9f %.9f %.9f %.9f %.9f" % \
-    (t_o[0], t_o[1], t_o[2], r_o[1], r_o[2], r_o[0])+ \
-    " %.9f %.9f %.9f %.9f %.9f %.9f" % \
-    (v_o[0], v_o[1], v_o[2], w_o[0], w_o[1], w_o[2])+ \
-    " %.9f %.9f %.9f %.9f %.9f %.9f %.9f %.9f %.9f %.9f %.9f %.9f" % \
-    (t_i_2[0], t_i_2[1], t_i_2[2], C_i_2[0][0], C_i_2[0][1], C_i_2[0][2], C_i_2[1][0], C_i_2[1][1], C_i_2[1][2],C_i_2[2][0], C_i_2[2][1], C_i_2[2][2])+ \
-    " %.9f %.9f %.9f %.9f %.9f %.9f %.9f %.9f %.9f %.9f %.9f %.9f" % \
-    (t_o_2[0], t_o_2[1], t_o_2[2], C_o_2[0][0], C_o_2[0][1], C_o_2[0][2], C_o_2[1][0], C_o_2[1][1], C_o_2[1][2],C_o_2[2][0], C_o_2[2][1], C_o_2[2][2])
+    " %.9f %.9f %.9f" % \
+    (t_wi_b[0], t_wi_b[1], t_wi_b[2])
 
   print line
   outputFile.write(line+"\n")
