--- a/code/matlab/3d/jerome.conf
+++ b/code/matlab/3d/jerome.conf
@@ -50,7 +50,8 @@ laser = Sensor(
   name         = "Laser",
   model        = "ibeo_alasca_xt",
   parent       = platform,
-  position     = [2.3, 0, 0.12]
+  position     = [2.3, 0, 0.12],
+  orientation  = [0, 90, 90]
 )
 
 imu = Sensor(
@@ -123,32 +124,27 @@ t_io = platform.actuator.getPosition(imu)
 r_io = platform.actuator.getOrientation(imu)
 outputFile.write("# Odometry frame (relative to IMU frame) [m]/[deg]: "+
   "t_x = %.9f, t_y = %.9f, t_z = %.9f, r_x = %.9f, r_y = %.9f, r_z = %.9f\n" %
-  (t_io[0], t_io[1], t_io[2], r_io[1], r_io[2], r_io[0]))
+  (t_io[0], t_io[1], t_io[2], r_io[2], r_io[1], r_io[0]))
 outputFile.write("# Format: time [s], x [m], y [m], z [m], "+
   "r_x [deg], r_y [deg], r_z [deg], v_x [m/s], v_y [m/s], v_z [m/s], "+
   "w_x [deg/s], w_y [deg/s], w_z [deg/s], w_FL [deg/s], w_FR [deg/s], "+
   "w_RL [deg/s], w_RR [deg/s], phi [deg]\n")
 
 def output(time):
-  v_iw_b = imu.solid.body.body.getLinearVel()
-  w_iw_b = imu.solid.body.body.getAngularVel() * 180 / pi
-
-  t_wi_b = imu.solid.body.body.getPosition()
+  v_ii_c = imu.getTranslationalVelocity()
+  w_ii_c = imu.getRotationalVelocity()
 
   line = "%.6f " % framework.scheduler.getTime()+ \
     "%.9f %.9f %.9f %.9f %.9f %.9f " % \
     (imu.globalPosition[0], imu.globalPosition[1], imu.globalPosition[2],
-    imu.globalOrientation[1], imu.globalOrientation[2],
+    imu.globalOrientation[2], imu.globalOrientation[1],
     imu.globalOrientation[0])+ \
     "%.9f %.9f %.9f %.9f %.9f %.9f " % \
-    (v_iw_b[0], v_iw_b[1], v_iw_b[2], w_iw_b[0], w_iw_b[1], w_iw_b[2])+ \
+    (v_ii_c[0], v_ii_c[1], v_ii_c[2], w_ii_c[2], w_ii_c[1], w_ii_c[0])+ \
     "%.9f %.9f %.9f %.9f %.9f" % \
     (platform.actuator.turningRates[0], platform.actuator.turningRates[1],
     platform.actuator.turningRates[2], platform.actuator.turningRates[3],
-    platform.actuator.state[1])+ \
-    " %.9f %.9f %.9f" % \
-    (t_wi_b[0], t_wi_b[1], t_wi_b[2])
-
+    platform.actuator.state[1])
   print line
   outputFile.write(line+"\n")
 
